header image set and scroll working still need to add scrollbar in page and fix title nbanner.

--- a/client/src/Components/FansLike/FansLike.module.css
+++ b/client/src/Components/FansLike/FansLike.module.css
@@ -1,6 +1,7 @@
 .fans-container {
   padding-left: 15px;
   padding-top: 15px;
+  background-color: rgb(24, 25, 25);
 }
 
 .title {
