--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,7 +66,3 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   } */
-
-body {
-  background-color: rgb(23, 24, 24);
-}
